# Synthetic-ITCH-Style-Exchange-Simulator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.cursor/rules/: read-docs.mdc
api/: main.py  requirements.txt  test_api.py
data/: price_data_seed_99999.csv
docker/: Dockerfile.build  Dockerfile.kafka-producer  Dockerfile.notebooks  Dockerfile.test  docker-compose.yml  speed-100x.yml  speed-10x.yml  speed-max.yml  speed-realtime.yml
docs/: 06_model_math_and_code_review.md  07_simple_imbalance_nonsense_audit.md  FINDINGS.md  README.md  build-test-run-verification.md  build-test-run.md  chunk-size-tuning.md  data-platform.md  dev-week-2-plan.md  dev-week-plan.md  event-log-format.md  performance-results.md  project-goal.md  visualization.md
docs/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-pipeline-architecture.md  0003-event-log-persistence.md  0004-realistic-price-dynamics.md  0005-python-visualization-csv-export.md  README.md
docs/ai/: general-rules.md  worklog-format.md
docs/encoding/: itch-encoder-scope.md
docs/itch/: ITCH_STREAMING.md
docs/producer/: 00_unified_build_plan.md  QRSDP_CALIBRATION.md  QRSDP_MECHANICS.md  QRSDP_V1_WALKTHROUGH.md  qr-sdp-event-producer.md
docs/producer/old documents/: qr-sdp-event-producer.md
docs/templates/: component-README.template.md
docs/worklog/: WORKLOG.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: simulation.spec.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: CreateSimulation.tsx  EventFeed.tsx  OrderBook.tsx  PlaybackControls.tsx  PriceChart.tsx  SimulationList.tsx  SimulationView.tsx
notebooks/: 01_price_visualisation.ipynb  02_stylised_facts.ipynb  03_session_summary.ipynb  04_multi_security_comparison.ipynb  06_live_streaming_query.ipynb  book_replay.py  ohlc.py  qrsdp_reader.py  requirements.txt  test.ipynb
pipeline/: requirements.txt
pipeline/clickhouse/: init.sh  init.sql
scripts/: run-native.sh  run-pipeline.sh  start-dev.sh
src/: README.md  calibrate_main.cpp  exchange_simulator.cpp  exchange_simulator.h  itch_stream_main.cpp  listen_main.cpp  log_info_main.cpp  main.cpp  run_main.cpp
src/book/: i_order_book.h  multi_level_book.cpp  multi_level_book.h
src/calibration/: intensity_curve_io.cpp  intensity_curve_io.h  intensity_estimator.cpp  intensity_estimator.h
src/core/: event_types.h  events.cpp  events.h  order.cpp  order.h  records.h
src/encoding/: itch_encoder.cpp  itch_encoder.h
src/io/: binary_file_sink.cpp  binary_file_sink.h  event_log_format.h  event_log_reader.cpp  event_log_reader.h  i_event_sink.h  in_memory_sink.cpp  in_memory_sink.h  kafka_sink.cpp  kafka_sink.h  multiplex_sink.h
src/itch/: endian.h  itch_decoder.h  itch_encoder.cpp  itch_encoder.h  itch_messages.h  itch_stream_consumer.cpp  itch_stream_consumer.h  moldudp64.cpp  moldudp64.h  udp_sender.cpp  udp_sender.h
src/logging/: event_log.cpp  event_log.h
src/matching/: matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h
src/model/: curve_intensity_model.cpp  curve_intensity_model.h  hlr_params.cpp  hlr_params.h  i_intensity_model.h  intensity_curve.cpp  simple_imbalance_intensity.cpp  simple_imbalance_intensity.h
src/producer/: event_producer.cpp  event_producer.h  i_producer.h  qrsdp_producer.cpp  qrsdp_producer.h  session_runner.cpp  session_runner.h
src/qrsdp/: competing_intensity_sampler.cpp  competing_intensity_sampler.h  curve_intensity_model.cpp  curve_intensity_model.h  event_log_parser.cpp  event_log_parser.h  hlr_params.cpp  hlr_params.h  i_attribute_sampler.h  i_event_sampler.h  i_event_sink.h  i_intensity_model.h  i_order_book.h  i_producer.h  in_memory_sink.cpp  in_memory_sink.h  intensity_curve.cpp  intensity_curve.h  intensity_curve_io.cpp  intensity_curve_io.h  intensity_estimator.cpp  intensity_estimator.h  mt19937_rng.cpp  mt19937_rng.h  multi_level_book.cpp  multi_level_book.h  qrsdp_producer.cpp  qrsdp_producer.h  records.h  simple_imbalance_intensity.cpp  simple_imbalance_intensity.h  unit_size_attribute_sampler.cpp  unit_size_attribute_sampler.h
src/rng/: irng.h  mt19937_rng.cpp  mt19937_rng.h
src/sampler/: competing_intensity_sampler.cpp  competing_intensity_sampler.h  i_attribute_sampler.h  i_event_sampler.h  unit_size_attribute_sampler.cpp  unit_size_attribute_sampler.h
src/streaming/: udp_streamer.cpp  udp_streamer.h
tests/: README.md
tests/core/: test_events.cpp  test_order.cpp  test_records.cpp
tests/encoding/: test_itch_encoder.cpp
tests/integration/: test_determinism.cpp
tests/io/: test_binary_file_sink.cpp  test_event_log_reader.cpp  test_multiplex_sink.cpp
tests/itch/: test_e2e_pipeline.cpp  test_itch_encoder.cpp  test_moldudp64.cpp  test_udp_roundtrip.cpp
tests/logging/: test_event_log.cpp
tests/matching/: test_matching_engine.cpp  test_order_book.cpp
tests/producer/: test_event_producer.cpp  test_producer.cpp  test_session_runner.cpp
tests/qrsdp/: test_attribute_sampler.cpp  test_binary_file_sink.cpp  test_book.cpp  test_calibration.cpp  test_curve_intensity.cpp  test_event_log_reader.cpp  test_intensity.cpp  test_interfaces.cpp  test_producer.cpp  test_records.cpp  test_sampler.cpp  test_session_runner.cpp
tests/sampler/: test_sampler.cpp
tests/streaming/: test_udp_streamer.cpp
tools/: README.md  requirements.txt  setup_venv.ps1  setup_venv.sh  visualize_event_log.cpp  visualize_price_data.py
tools/qrsdp_ui/: CMakeLists.txt  README.md  main.cpp
worklog/: WORKLOG.md
